src/test/resources/failing/fail55.pnd
@type Animal
foo(x, y) : Animal, Animal
bar(x) <- y = @"123", foo(y, x)
